<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <!-- Adicione o ImageView para o logo no canto superior direito -->
    <ImageView
        android:id="@+id/logoLeanNoAds"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/c1"
        android:contentDescription="@string/lean_no_ads_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/textColorLight"
        android:textSize="32sp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="24sp"
        app:autoSizeMaxTextSize="54sp"
        app:autoSizeStepGranularity="2sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTextView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        android:text="@string/title2"
        android:textAlignment="center"
        android:textColor="@color/textColorLight"
        android:textSize="24sp"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="54sp"
        app:autoSizeMinTextSize="24sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="-16dp"
        app:cardBackgroundColor="@color/colorPrimaryLight"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardContentLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/passwordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorPrimary"
                android:breakStrategy="simple"
                android:padding="8dp"
                android:text=""
                android:textColor="@color/textColorLight"
                android:textIsSelectable="true"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/viewPrimary"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="32dp"
                android:background="#D3D3D3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordTextView" />

            <LinearLayout
                android:id="@+id/useUppercaseSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/option_background"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewPrimary">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:paddingStart="7dp"
                    android:text="@string/use_uppercase"
                    android:textColor="@color/colorPrimaryLight2"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/uppercaseSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:contentDescription="@string/use_uppercase"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="@color/checkbox_tint"
                    app:trackTint="@color/colorLightGray" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/useNumbersSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/option_background"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/useUppercaseSwitch">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:paddingStart="7dp"
                    android:text="@string/use_numbers"
                    android:textColor="@color/colorPrimaryLight2"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/numbersSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:contentDescription="@string/use_uppercase"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="@color/checkbox_tint"
                    app:trackTint="@color/colorLightGray" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/useSpecialCharsSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/option_background"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/useNumbersSwitch">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:paddingStart="7dp"
                    android:text="@string/use_special_chars"
                    android:textColor="@color/colorPrimaryLight2"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/usespecialcharsSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:contentDescription="@string/use_uppercase"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="@color/checkbox_tint"
                    app:trackTint="@color/colorLightGray" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/excludeSimilarCharsSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/option_background"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/useSpecialCharsSwitch">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:paddingStart="7dp"
                    android:text="@string/exclude_similar_chars"
                    android:textColor="@color/colorPrimaryLight2"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/excludesimilarcharsSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:contentDescription="@string/use_uppercase"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="@color/checkbox_tint"
                    app:trackTint="@color/colorLightGray" />
            </LinearLayout>


            <!--            <com.google.android.material.switchmaterial.SwitchMaterial-->
            <!--                android:id="@+id/useUppercaseCheckBox"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="16dp"-->
            <!--                android:checked="true"-->
            <!--                android:text="@string/use_uppercase"-->
            <!--                android:textColor="@color/checkbox_tint"-->
            <!--                app:trackTint="@color/colorLightGray"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@+id/viewPrimary" />-->

            <!--            &lt;!&ndash; Linha separadora cinza claro &ndash;&gt;-->
            <!--            <View-->
            <!--                android:layout_width="0dp"-->
            <!--                android:layout_height="1dp"-->
            <!--                android:layout_marginTop="8dp"-->
            <!--                android:background="#D3D3D3"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@+id/useUppercaseCheckBox" />-->

            <!--            <com.google.android.material.switchmaterial.SwitchMaterial-->
            <!--                android:id="@+id/useNumbersCheckBox"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="16dp"-->
            <!--                android:checked="true"-->
            <!--                android:text="@string/use_numbers"-->
            <!--                android:textColor="@color/checkbox_tint"-->
            <!--                app:trackTint="@color/colorLightGray"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@+id/useUppercaseCheckBox" />-->

            <!-- Linha separadora cinza claro -->
            <!--            <View-->
            <!--                android:layout_width="0dp"-->
            <!--                android:layout_height="1dp"-->
            <!--                android:layout_marginTop="16dp"-->
            <!--                android:background="#D3D3D3"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@+id/excludeSimilarCharsSwitch" -->
            <!--                -->
            <!--                />-->

            <!--            <com.google.android.material.switchmaterial.SwitchMaterial-->
            <!--                android:id="@+id/useSpecialCharsCheckBox"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="16dp"-->
            <!--                android:checked="true"-->
            <!--                android:text="@string/use_special_chars"-->
            <!--                android:textColor="@color/checkbox_tint"-->
            <!--                app:trackTint="@color/colorLightGray"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@+id/useNumbersCheckBox" />-->

            <!-- Linha separadora cinza claro -->
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="#D3D3D3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/excludeSimilarCharsSwitch" />

            <SeekBar
                android:id="@+id/lengthSeekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:backgroundTint="@color/colorPrimaryLight2"
                android:max="30"
                android:progress="10"
                android:progressTint="@color/colorPrimaryLight2"
                android:thumbTint="@color/colorPrimaryLight2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/excludeSimilarCharsSwitch" />

            <TextView
                android:id="@+id/lengthLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/length_label"
                android:textColor="@color/colorPrimaryLight2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lengthSeekBar" />

            <Button
                android:id="@+id/generateButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/generate_password"
                android:textColor="@color/colorPrimaryLight2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lengthLabelTextView"
                app:strokeColor="@color/colorPrimaryLight2" />

            <ImageButton
                android:id="@+id/copyButton"
                style="@style/MyOutlinedImageButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:adjustViewBounds="true"
                android:padding="12dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_copy"
                app:layout_constraintBottom_toBottomOf="@+id/generateButton"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toEndOf="@+id/generateButton"
                app:layout_constraintTop_toTopOf="@+id/generateButton"
                app:tint="@color/colorPrimaryLight2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
